# la-patate-chaude

client/: Cargo.toml
client/src/: client.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
