[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1"
md5 = "0.7.0"
rust-hashcash = "0.1"